force-app/main/default/objects/Registration_Exam__c/Registration_Exam__c.object-meta.xml
<CustomObject>
    <label>Registration Exam</label>
    <nameField>
        <displayFormat>EX-{000000}</displayFormat>
        <label>Exam Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Exams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>