force-app/main/default/objects/Registration_Exam__c/fields/Exam_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Expiration_Date__c</fullName>
    <formula>DATE( YEAR(Exam_Passed_Date__c) +2
, MONTH(Exam_Passed_Date__c)
, DAY(Exam_Passed_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Expiration Date</label>
    <type>Date</type>
</CustomField>