force-app/main/default/objects/Registration_Exam__c/fields/Exam_Passed_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Passed_Date__c</fullName>
    <label>Exam Date</label>
    <type>Date</type>
</CustomField>