force-app/main/default/objects/Registration_Exam__c/fields/Exam_Version__c.field-meta.xml
<CustomField>
    <fullName>Exam_Version__c</fullName>
    <description>Used in FLC to enter exam version administered</description>
    <inlineHelpText>Enter exam version administered</inlineHelpText>
    <label>Exam Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>