force-app/main/default/objects/Registration_Exam__c/fields/Get_Registration__c.field-meta.xml
<CustomField>
    <fullName>Get_Registration__c</fullName>
    <formula>Ownership__r.Registration__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Registration</label>
    <type>Text</type>
</CustomField>