force-app/main/default/objects/Registration_Exam__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <description>Master Detail relationship to ownership object</description>
    <label>Ownership</label>
    <referenceTo>Ownership__c</referenceTo>
    <relationshipLabel>Registration Exams</relationshipLabel>
    <relationshipName>Registration_Exams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>