force-app/main/default/objects/Registration_Exam__c/fields/Send_Exam_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Exam_Notification_Date__c</fullName>
    <description>Date the exam notice was sent to applicant.</description>
    <label>Send Exam Notification Date</label>
    <type>Date</type>
</CustomField>